2012-07-28  Per Bothner  <per@bothner.com>

	* configure.in: Don't default to with-httpserver or Java6
	if configured for Android.

2012-07-10  Per Bothner  <per@bothner.com>

	* build.xml (xml-classes): Added Xutils.scm.

2012-07-03  Per Bothner  <per@bothner.com>

	* build.xml: Some cleanups for with-awt dependeny, which
	should benefit Android.

2012-05-31  Per Bothner  <per@bothner.com>

	* configure.in: Change argument to --with-javafx to be actual jfxrt.jar
	though also supporting old meaning.
	Also a fix for servlet path.

con2012-05-30  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.12.1.
	* build.xml (version.release): Likewise.

2012-05-28  Per Bothner  <per@bothner.com>

	* Makefile.am (dist-kawa-@VERSION@.jar): Build with javafx support.
	* configure.in: Related changes.

2012-05-24  Jacques Herry

	* build.xml (jar): Fix.

2012-05-25  Per Bothner  <per@bothner.com>

	* configure.in (WITH_SERVLET_ARG): New variable.
	* Makefile.am (dist-kawa-@VERSION@.jar): Include serlet jar's
	location in build classpath.

	* Makefile.am: Use CLASSPATH_SEPARATOR for the sake of CygWin.

2012-05-20  Jacques Herry

	* build.xml: Fix to build META_INFO/services.

2012-05-20  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml: "Inline" named filesets lib-scm and slib-scm to their
	point of use, fixing a problem where the filesets depend on
	with-swing, which is used before it is set in build-settings.

2012-05-13  Per Bothner  <per@bothner.com>

	* build.xml: Add ScriptEngineFactory support for discovering
	JSR-223 script engines (Scheme and optionally XQuery).
	Also, improvements in handling of enable-xml.

2012-05-10  Per Bothner  <per@bothner.com>

	* build.xml: Add dependencies on with-swing property.
	(java-classes): Always compile gnu/kawa/models.

2012-04-08  Per Bothner  <per@bothner.com>

	* AUTHORS: Point to Acknowledgement section of doc/kawa.texi.

2012-02-02  Per Bothner  <per@bothner.com>
